<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.cc_project02.TransactionNewActivity">

    <TextView
        android:id="@+id/date_title"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/date_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtype_title"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtype_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_title" />

    <TextView
        android:id="@+id/currency_title"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginLeft="64dp"
        android:text="@string/currency_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtype_title" />

    <TextView
        android:id="@+id/quantity_title"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/quantity_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_title" />

    <EditText
        android:id="@+id/date_entry"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:hint="@string/date_hint"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/date_title"
        app:layout_constraintTop_toTopOf="parent" />
    <!--android:inputType="textPersonName"-->
    <!--android:ems="10"-->
    <!--tools:layout_editor_absoluteY="86dp" -->
    />

    <EditText
        android:id="@+id/txtype_entry"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/txtype_hint"
        app:layout_constraintLeft_toRightOf="@+id/txtype_title"
        app:layout_constraintTop_toBottomOf="@+id/date_entry"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/currency_entry"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/currency_hint"
        app:layout_constraintLeft_toRightOf="@+id/currency_title"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtype_entry" />
    <!--android:inputType="textPersonName"-->
    <!--android:ems="10"-->
    <!--tools:layout_editor_absoluteY="86dp" -->
    />

    <EditText
        android:id="@+id/quantity_entry"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/quantity_hint"
        app:layout_constraintLeft_toRightOf="@+id/quantity_title"
        app:layout_constraintTop_toBottomOf="@+id/currency_entry"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/savetx_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/savetx_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_entry" />


    <!--android:inputType="textPersonName"-->
        <!--android:ems="10"-->
        <!--tools:layout_editor_absoluteY="86dp" -->
        />

</android.support.constraint.ConstraintLayout>
